fixes modal margin-top on mobile devices. reverts changes on bootstrap _variables.scss.

--- a/templates/NOVA/themes/base/sass/components/_modals.scss
+++ b/templates/NOVA/themes/base/sass/components/_modals.scss
@@ -17,3 +17,7 @@
 		.close { position: fixed; top: 1rem; right: 1rem; transform: none; z-index: $zindex-fixed; }
 	}
 }
+
+.modal-dialog {
+	margin-top: $modal-dialog-margin-y-sm-up;
+}
